--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,10 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
 </head>
+
 <body>
     <!-- component  is from https://tailwindcomponents.com/component/sidebar-navigation-->
-    
+
     <div class="min-h-screen flex flex-row bg-gray-100">
         <div class="flex flex-col w-56 bg-white rounded-r-3xl overflow-hidden">
             <div class="flex items-center justify-center h-20 shadow-md">
@@ -26,32 +28,33 @@
                     </a>
                 </li>
                 {% if request.user.is_authenticated %}
-                    <li>
-                        <a href="{% url 'account_logout' %}"
-                            class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                            <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                                    class="bx bx-log-out"></i></span>
-                            <span class="text-sm font-medium">Logout</span>
-                        </a>
-                    </li>
+                <li>
+                    <a href="{% url 'account_logout' %}"
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+                                class="bx bx-log-out"></i></span>
+                        <span class="text-sm font-medium">Logout</span>
+                    </a>
+                </li>
                 {% else %}
-                    <li>
-                        <a href="{% url 'account_login' %}"
-                            class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                            <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                                    class="bx bx-log-in"></i></span>
-                            <span class="text-sm font-medium">Login</span>
-                        </a>
-                    </li>
+                <li>
+                    <a href="{% url 'account_login' %}"
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+                                class="bx bx-log-in"></i></span>
+                        <span class="text-sm font-medium">Login</span>
+                    </a>
+                </li>
                 {% endif %}
             </ul>
         </div>
-        <div class="p-16">
+        <div class="p-16 w-3/4">
             {% block body %}
-                {% block content %}
-                {% endblock %}    
+            {% block content %}
+            {% endblock %}
             {% endblock %}
         </div>
     </div>
 </body>
+
 </html>
