Progress of the Django 201 project - update on 19 Apr 2021

--- a/feed/templates/feed/homepage.html
+++ b/feed/templates/feed/homepage.html
@@ -4,7 +4,9 @@
 {% block title %}Change the title of the page{% endblock %}
 
 {% block body %}
-    {% for post in posts %}
+    <div id="post-container">
+        {% for post in posts %}
         {% include "includes/post.html" with post=post show_detail_link=True %}
-    {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock %}
