--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -32,7 +32,7 @@
                 {% if request.user.is_authenticated %}
                 <li>
                     <a href="{% url 'feed:new_post' %}"
-                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800 js-toggle-modal">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
                                 class='bx bxs-message-add'></i></span>
                         <span class="text-sm font-medium">New Post</span>
@@ -72,15 +72,19 @@
             <div class="flex flex-col items-start p-4">
                 <div class="flex items-center w-full">
                     <div class="text-gray-900 font-medium text-lg">New post</div>
-                    <svg class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer"
+                    <svg class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer js-toggle-modal"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
                         <path
                             d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z" />
                     </svg>
                 </div>
                 <hr>
-                <div class="">
+                <div class="w-9/12">
                     {#TODO: Add the ajax form #}
+                    <textarea cols="10" rows="5"
+                        class="border-2 border-green-500 outline-none rounded-md my-4 js-post-text w-full p-3"
+                        placeholder="Enter your post" maxlength="240"
+                        data-post-url="{% url 'feed:new_post' %}"></textarea>
                 </div>
                 <hr>
                 <div class="ml-auto">
@@ -98,6 +102,9 @@
     </div>
     {% endif %}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous"></script>
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 
