Project update on 21 April 2021

--- a/til/templates/account/base.html
+++ b/til/templates/account/base.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block body %}
-    {% if messages %}
-        <div>
-            <strong>Messages:</strong>
-            <ul>
-                {% for message in messages %}
-                <li>{{message}}</li>
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
+{% if messages %}
+<div class="form-message">
+    <strong>Messages:</strong>
+    <ul class="message-list">
+        {% for message in messages %}
+        <li class="message-list-item">{{message}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
 
-    {% block content %}{% endblock %}
+{% block content %}{% endblock %}
 {% endblock %}
