--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -10,6 +10,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     <div class="min-h-screen flex flex-row bg-gray-100">
         <div class="flex flex-col w-56 bg-white rounded-r-3xl overflow-hidden">
             <div class="flex items-center justify-center h-20 shadow-md">
-                <h1 class="text-3xl uppercase text-indigo-500">TIL</h1>
+                <h1 class="text-3xl uppercase text-green-700 font-semibold">TIL</h1>
             </div>
             <ul class="flex flex-col py-4">
                 <li>
@@ -37,6 +38,17 @@
                                 class='bx bxs-message-add'></i></span>
                         <span class="text-sm font-medium">New Post</span>
                     </a>
+                </li>
+                <li>
+                    <a href="{% url 'account_logout' %}"
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+                                class='bx bxs-user-detail'></i></span>
+                        <span class="text-sm font-medium">Edit profile</span>
+                    </a>
+                </li>
+                <li>
+
                     <a href="{% url 'account_logout' %}"
                         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
@@ -56,7 +68,7 @@
                 {% endif %}
             </ul>
         </div>
-        <div class="p-16 w-3/5">
+        <div class="p-16 w-3/5 login-form">
             {% block body %}
             {% block content %}
             {% endblock %}
@@ -71,7 +83,7 @@
         <div class="bg-white rounded-lg w-1/2">
             <div class="flex flex-col items-start p-4">
                 <div class="flex items-center w-full">
-                    <div class="text-gray-900 font-medium text-lg">New post</div>
+                    <div class="text-green-700 font-medium text-2xl">New post</div>
                     <svg class="ml-auto fill-current text-gray-700 w-6 h-6 cursor-pointer js-toggle-modal"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
                         <path
@@ -82,14 +94,14 @@
                 <div class="w-9/12">
                     {#TODO: Add the ajax form #}
                     <textarea cols="10" rows="5"
-                        class="border-2 border-green-500 outline-none rounded-md my-4 js-post-text w-full p-3"
+                        class="border-2 border-green-700 outline-none rounded-md my-4 js-post-text w-full p-3"
                         placeholder="Enter your post" maxlength="240"
                         data-post-url="{% url 'feed:new_post' %}"></textarea>
                 </div>
                 <hr>
                 <div class="ml-auto">
                     <button
-                        class="bg-white text-gray-800 font-bold rounded border-b-2 border-green-500 hover:border-green-600 hover:bg-green-500 hover:text-white shadow-md py-1 px-3 inline-flex items-center mt-4 js-submit"
+                        class="bg-white text-gray-800 font-bold rounded border-b-2 border-green-700 hover:border-green-800 hover:bg-green-700 hover:text-white shadow-md py-1 px-3 inline-flex items-center mt-4 js-submit"
                         type="button">
                         <span class="mr-2">Create Post</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
