--- a/profiles/templates/profiles/detail.html
+++ b/profiles/templates/profiles/detail.html
@@ -5,7 +5,9 @@
 {% block body %}
 <!-- component from https://tailwindcomponents.com/component/profile-card -->
 <div class="rounded rounded-t-lg overflow-hidden shadow-lg max-w-xs my-3">
-    <img src="https://i.imgur.com/dYcYQ7E.png" class="w-full" />
+    {% thumbnail user.profile.image_bg "600x240" crop="center" as im %}
+    <img src="{{ im.url }}" class="w-full" />
+    {% endthumbnail %}
     <div class="flex justify-center -mt-8">
         {% thumbnail user.profile.image "150x150" crop="center" as im %}
         <img src="{{ im.url }}" class="rounded-full border-solid border-white border-2 -mt-3">
