--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'account_logout' %}"
+                    <a href="{% url 'profile' %}"
                         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
                                 class='bx bxs-user-detail'></i></span>
@@ -65,10 +65,36 @@
                         <span class="text-sm font-medium">Login</span>
                     </a>
                 </li>
+                <li>
+                    <a href="{% url 'account_signup' %}"
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+                                class='bx bxs-user-plus'></i></span>
+                        <span class="text-sm font-medium">Register</span>
+                    </a>
+                </li>
                 {% endif %}
             </ul>
         </div>
         <div class="p-16 w-3/5 login-form">
+            {% if messages %}
+            {% for message in messages %}
+            <div class="bg-green-100 border-t-4 border-green-500 rounded-b text-green-900 px-4 py-3 shadow-md mb-2"
+                role="alert">
+                <div class="flex">
+                    <div class="py-1"><svg class="fill-current h-6 w-6 text-green-500 mr-4"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                            <path
+                                d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 11V9h2v6H9v-4zm0-6h2v2H9V5z" />
+                        </svg></div>
+                    <div>
+                        <p class="font-bold message message-title">{{ message.tags }}</p>
+                        <p class="text-sm message message-text">{{ message }}</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
             {% block body %}
             {% block content %}
             {% endblock %}
