--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -4,8 +4,14 @@
 {% block title %}{{ user.username }}{% endblock title %}
 
 {% block body %}
+
+<div class="text-center mb-4">
+    <h3 class="font-light text-4xl text-green-700 w-full">
+        Update profile for {{ user.username }}
+    </h3>
+</div>
 <!-- component from https://tailwindcomponents.com/component/profile-card -->
-<div class="rounded rounded-t-lg overflow-hidden shadow-lg max-w-xs">
+<div class="rounded rounded-t-lg overflow-hidden shadow-lg">
     {% thumbnail user.profile.image_bg "600x240" crop="center" as im %}
     <img src="{{ im.url }}" class="w-full" />
     {% endthumbnail %}
@@ -14,11 +20,21 @@
         <img src="{{ im.url }}" class="rounded-full border-solid border-white border-2 -mt-3">
         {% endthumbnail %}
     </div>
-    <div class="text-center px-3 pb-6 pt-2">
-        <h3 class="text-black text-lg font-bold">
-            <span class="font-normal">Username:</span>
-            {{ user.username }}
-        </h3>
-    </div>
+
+    <form method="POST" enctype="multipart/form-data" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
+        {% csrf_token %}
+
+        {{ u_form|crispy }}
+        {{ p_form|crispy }}
+
+        <div class="flex items-center justify-between">
+            <button
+                class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="submit">
+                Update
+            </button>
+        </div>
+
+    </form>
 </div>
 {% endblock body %}
