--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -32,6 +32,14 @@
                 </li>
                 {% if request.user.is_authenticated %}
                 <li>
+                    <a href="{% url 'feed:friends_posts' %}"
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+                                class='bx bx-comment-detail'></i></span>
+                        <span class="text-sm font-medium">Friends posts</span>
+                    </a>
+                </li>
+                <li>
                     <a href="{% url 'feed:new_post' %}"
                         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800 js-toggle-modal">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
@@ -48,7 +56,6 @@
                     </a>
                 </li>
                 <li>
-
                     <a href="{% url 'account_logout' %}"
                         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
@@ -58,19 +65,19 @@
                 </li>
                 {% else %}
                 <li>
-                    <a href="{% url 'account_login' %}"
-                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
-                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                                class="bx bx-log-in"></i></span>
-                        <span class="text-sm font-medium">Login</span>
-                    </a>
-                </li>
-                <li>
                     <a href="{% url 'account_signup' %}"
                         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
                                 class='bx bxs-user-plus'></i></span>
                         <span class="text-sm font-medium">Register</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'account_login' %}"
+                        class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
+                        <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
+                                class="bx bx-log-in"></i></span>
+                        <span class="text-sm font-medium">Login</span>
                     </a>
                 </li>
                 {% endif %}
