--- a/feed/templates/feed/homepage.html
+++ b/feed/templates/feed/homepage.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 
-{% block title %}Change the title of the page{% endblock %}
+{% block title %}TIL - Homepage{% endblock %}
 
 {% block body %}
-    <div id="post-container">
-        {% for post in posts %}
-        {% include "includes/post.html" with post=post show_detail_link=True %}
-        {% endfor %}
-    </div>
+<div id="post-container">
+    {% for post in posts %}
+    {% include "includes/post.html" with post=post show_detail_link=True %}
+    {% endfor %}
+</div>
 {% endblock %}
