Upload of project progress. Password update is working now.

--- a/feed/templates/feed/my_posts.html
+++ b/feed/templates/feed/my_posts.html
@@ -12,7 +12,7 @@
     {% else %}
     <div class="text-center mb-4">
         <h3 class="font-light text-4xl text-green-700 w-full">
-            {{ user.username }}, You do not have any posts!
+            You do not have any posts!
         </h3>
     </div>
     {% endif %}
