--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -23,23 +23,33 @@
     font-weight: 500;
 }
 
-.login-form .login label, .login-form .signup label, .login-form .password_reset label {
+.login-form .login label, .login-form .signup label, .login-form .password_reset label, .password_change label {
     display: inline-block;
     width: 15%;
     padding: .5rem 1rem .5rem 0;
 }
 
-.login-form .signup label {
-    width: 25%;
+.login-form .signup label, .password_change label {
+    min-width: 25%;
 }
 
-.login-form .login input, .login-form .signup input, .login-form .password_reset input {
+.password_change label {
+    min-width: 35%;
+}
+
+.password_change > a {
+    display: inline-block;
+    margin-top: .5rem;
+    opacity: .6;
+}
+
+.login-form .login input, .login-form .signup input, .login-form .password_reset input, .password_change input , #id_password1, #id_password2 {
     width: 60%;
     padding: .5rem 1rem;
     border-radius: 5px; 
 }
 
-.login-form .login input:focus, .login-form .signup input:focus, .login-form .password_reset input:focus {
+.login-form .login input:focus, .login-form .signup input:focus, .login-form .password_reset input:focus, .password_change input:focus , #id_password1:focus, #id_password2:focus {
     outline-color: #299929;
 }
 
@@ -48,7 +58,7 @@
     color: #555;
 }
 
-.login .primaryAction, .signup button, .password_reset input[type="submit"] {
+.login .primaryAction, .signup button, .password_change button, .password_reset input[type="submit"], form > input[type="submit"] {
     display: block;
     background-color: #047857;
     color: #eee;
@@ -56,13 +66,13 @@
     border-radius: 5px;
     padding: .8rem .5rem;
     margin-top: 1rem;
-    width: 8rem;
+    min-width: 8rem;
     outline-color: #047857;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     transition: background-color .5s, box-shadow .5s;
 }
 
-.login .primaryAction:hover, .signup button:hover, .password_reset input[type="submit"]:hover {
+.login .primaryAction:hover, .signup button:hover, .password_change button:hover, .password_reset input[type="submit"]:hover, form > input[type="submit"]:hover {
     background-color: #299929;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
 }
