--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -43,7 +43,7 @@
                     <a href="{% url 'feed:my_posts' %}"
                         class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
                         <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
-                                class='bx bx-comment-detail'></i></span>
+                                class='bx bxl-firebase'></i></span>
                         <span class="text-sm font-medium">My posts</span>
                     </a>
                 </li>
