Upload of project progress. Template update - front end

--- a/feed/templates/feed/friends_posts_view.html
+++ b/feed/templates/feed/friends_posts_view.html
@@ -4,8 +4,15 @@
 {% block title %}My friends posts{% endblock %}
 
 {% block body %}
+{% if friend_posts %}
+    <div class="text-center mb-4">
+        <h3 class="font-light text-4xl text-green-700 w-full">
+            {{ user.username }} - Posts by your friends
+        </h3>
+    </div>
+{% endif %}
 <div id="post-container">
-    {% if  friend_posts%}
+    {% if  friend_posts %}
         {% for post in friend_posts %}
             {% include "includes/post.html" with post=post show_detail_link=True %}
         {% endfor %}
