--- a/feed/templates/feed/my_posts.html
+++ b/feed/templates/feed/my_posts.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 
 
-{% block title %}My posts{% endblock %}
+{% block title %}{{user.username}} - My posts{% endblock %}
 
 {% block body %}
+{% if my_posts %}
+<div class="text-center mb-4">
+    <h3 class="font-light text-4xl text-green-700 w-full">
+        Posts by {{ user.username }}
+    </h3>
+</div>
+{% endif %}
 <div id="post-container">
     {% if my_posts%}
     {% for post in my_posts %}
