--- a/til/templates/base.html
+++ b/til/templates/base.html
@@ -91,7 +91,7 @@
                 {% endif %}
             </ul>
         </div>
-        <div class="p-16 w-3/5 login-form">
+        <div class="py-10 px-16 w-3/5 login-form">
             {% if messages %}
             {% for message in messages %}
             <div class="bg-green-100 border-t-4 border-green-500 rounded-b text-green-900 px-4 py-3 shadow-md mb-2"
